# Emilia

./: .pre-commit-config.yaml  README.md  TODO.md  pyproject.toml
backend/: environment.yml  pyproject.toml
backend/emilia/: .env.example  cli.py  main.py  settings.py
backend/emilia/crud/: calls.py
backend/emilia/database/: base.py  crud.py  models.py  postgres.py  sqlite.py
backend/emilia/models/: models.py
backend/flowise/: package-lock.json  package.json
backend/hooks/: StoreChatid.js  UpsertUserAndLead.js  getChatid.js  getUser.js  getUserDataFromRedBotUserID.js
backend/hooks/node-red-contrib-cal-com/: cal-com.html  cal-com.js
backend/tests/: conftest.py
backend/tests/crud/: test_calls.py  test_calls_sqlite.py
docs/: Article__create-your-api-with-fastapi-asyncpg-sqlmodel.md  ArtisanLabs___Emilia.md  ArtisanLabs___Emilia__backend.md
im/telegram/: .env.template  Dockerfile  README.md  environment.docker.yml  main.py  pyproject.toml
im/telegram/emiliabot/: emiliabot.py
im/telegram/emiliabot/database/: supabase.py
im/telegram/emiliabot/models/: models.py
im/telegram/tests/databases/: test_supabase.py
scripts/: sync_docs.sh
supabase/: config.toml
supabase/migrations/: 20240307142155_knowles_one.sql  20240312142633_timestamp_create_telegram_user_and_user_stored_messages.sql
