[tool.poetry]
name = "emiliabot"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.10,<3.12"
python-telegram-bot = "^20.8"
httpx = "^0.26.0"
mypy = "^1.8.0"
black = "^23.12.1"
langchain = "0.1.4"
google-cloud-texttospeech = "2.16.1"
vocode = { git = "https://github.com/ArtisanLabs/vocode-python.git", branch = "486-support-for-pydantic-v2-v1-compatible" }


[tool.poetry.group.dev.dependencies]
pytest = "^8.0.1"
pytest-asyncio = "^0.23.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
